--- a/Linked_List/CMakeLists.txt
+++ b/Linked_List/CMakeLists.txt
@@ -1,10 +1,15 @@
-﻿cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.5)
 
-project(LinkedListProject)
+project(LinkedListProject VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(linkedlist main.cpp)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Set C++ standard (optional, based on your requirement)
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET linkedlist PROPERTY CXX_STANDARD 20)
-endif()
+include(CTest)
+enable_testing()
+
+add_executable(LinkedListProject main.cpp)
+
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
